# lacrei-saude-challenge

./: .gitignore  Procfile  README.md  docker-compose.yml  dockerfile  pyproject.toml  pytest.ini
.ebextensions/: 01_nginx_proxy.config
.github/workflows/: ci.yml  deploy.yml
.platform/nginx/conf.d/: proxy.config
apps/: conftest.py
apps/appointments/: urls.py
apps/appointments/migrations/: 0001_initial.py  0002_appointment_is_active.py
apps/appointments/models/: __init__.py  appointments_model.py
apps/appointments/repositories/: appointments_repository.py
apps/appointments/serializers/: appointments_serializer.py
apps/appointments/services/: appointments_service.py
apps/appointments/tests/: __init__.py
apps/appointments/tests/fixtures/: appointments_fixtures.py  factory.py
apps/appointments/views/: appointments_view.py
apps/common/misc/: request_mixin.py
apps/common/models/: common_model.py
apps/common/repositories/: common_repository.py
apps/professionals/: apps.py  urls.py
apps/professionals/migrations/: 0001_initial.py  0002_professionaladdress_is_active_and_more.py
apps/professionals/models/: __init__.py  professionals_model.py
apps/professionals/repositories/: profesisonals_repository.py
apps/professionals/serializers/: professionals_serializer.py
apps/professionals/services/: professionals_service.py
apps/professionals/tests/: __init__.py
apps/professionals/views/: professionals_view.py
apps/users/migrations/: 0001_initial.py
apps/users/models/: __init__.py  users_model.py
core/: settings.py  urls.py
(+11 files in other folders)
